# CVDagner

./: .env.example  .gitignore  README.md  bentofile.detect.yaml  botmain.py  compose.yaml  dockerfile.fix  easytest.py  main.py  pyproject.toml  test.py
AIService/app/: logger.py  main.py
AIService/app/agentsfuncs/: agentexctractaddcam.py  agentextract.py  agentreporter.py  agentwithtools.py
AIService/app/apis/: aiapi.py  newcameraapi.py  tenminreportapi.py
AIService/app/core/: addcameraprompt.py  config.py  kafkabroker.py  reportprompt.py  sgrextractpompt.py  sgrpompt.py  so.py  toolcallpormpt.py
AIService/app/orkestrs/: orkestr.py
AIService/app/services/: kafkaconsume.py  kafkapublishactions.py
AIService/app/tools/: call_airstrike.py  send_drone.py  tools_json.py
AIService/app/utils/: get_restriction.py
AlertsService/app/: logger.py  main.py
AlertsService/app/apis/: addcameraapi.py  changecoordinates.py  changerulesapi.py  getcoordinatesapi.py  getrestrictionsapi.py
AlertsService/app/core/: config.py
AlertsService/app/funcs/: add_camera.py  get_rules.py  (+4 more)
BentoService/: bentomodel.py  config.py  fine_tune.py  modelservice.py  testnames.py
BentoService/FineTune/: convert_csv_to_yolo.py  dataset.yaml  fine_tune.py
DetectGraphApi/: .env.example
DetectGraphApi/app/: logger.py  main.py
DetectGraphApi/migrations/: env.py
GraphApi/: graphapi.py
TgGraphBot/: config.py
VideoProduce/: .env.video  config.py  dbschema.py  fapi.py
VideoProduce/app/: logger.py  main.py
VideoProduce_backend/app/: main.py
backend_VideoProduce/: .env.example
backend_VideoProduce/app/: logger.py  main.py
backend_VideoProduce/migrations/: env.py
frontend_VideoProduce/app/: main.py
telegram_bot/: .env.example  .env.gbot
telegram_bot/bot/: config.py  logger.py  main.py
(+58 files in other folders)
