[project]
name = "cvdanger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "aiogram>=3.24.0",
    "bentoml>=1.4.35",
    "fastapi[standard]>=0.128.5",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "strawberry-graphql[fastapi]>=0.291.3",
    "ultralytics>=8.4.14",
]
